--- a/Vidly/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Vidly/Views/Movies/Random.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.Movie
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 <!-- Yllä oleva namespace hakee Movie-luokan -->
 
 @{
@@ -6,5 +6,37 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+@*
+    Usean rivin kommentti
+*@
+
+<!-- Jos vuokranneita on 5 tai enemmän niin class = popular, muuten ei luokkaa, siten tietyn luokan tektit voidaan muotoilla eri lailla.
+    Tätä kyseistä tyyliä voi käyttää myös muihin tarpeisiin -->
+@{ 
+    var className = Model.Customers.Count > 5 ? "popular" : null;
+}
+
+
+<h2 class="@className">@Model.Movie.Name</h2>
+
+
+<!--
+Razor syntax, lohkon sisään voidaan kirjoittaa c# tai html, at-merkki alkuun jos c#   
+    ViewEngine in MVC called RazorViewEngine knows how to parse this syntax
+-->
+
+@if (Model.Customers.Count == 0)
+{
+    <p>No one has rented this movie before.</p>
+}
+else
+{
+    <ul>
+        @foreach (var customer in Model.Customers)
+        {
+            <li>@customer.Name</li>
+        }
+    </ul>
+}
+
 
