--- a/Vidly/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Vidly/Views/Shared/_NavBar.cshtml
@@ -9,13 +9,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Vidly", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <!--ensimmäinen attribuutti on se mikä näkyy sivustolla käyttäjälle (eli voi olla mitä vaan, silti toimii)
+                    keskimmäinen kolmesta kertoo kansion, jossa controller on eli index on omassa kansiossa, jos siinä oli "home" niin esim customers controllerin sijainti olisi home/customers
+                    viimeinen attribuutti on controllerin nimi
+                    -->
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
