--- a/Vidly/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Vidly/Views/Customers/Details.cshtml
@@ -11,3 +11,11 @@
 
 <h2>@Model.Name</h2>
 
+<li>Membership Type: @Model.MembershipType.Name</li>
+
+@if (Model.Birthdate.HasValue)
+{
+    <li>Birthdate: @Model.Birthdate.Value.ToShortDateString()</li>
+}
+
+
