--- a/Vidly/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Vidly/Views/Customers/New.cshtml
@@ -12,7 +12,9 @@
 <h2>New Customer</h2>
 
 <!-- BeginForm on kuin <form> aloitustagi
-    mutta jos käytetään alussa using niin sitten saadaan mukaan lopputägi-->
+    mutta jos käytetään alussa using niin sitten saadaan mukaan lopputägi
+    "Create" = target action, submit button vie osoitteeseen Customers/Create
+    -->
 @using (Html.BeginForm("Create", "Customers"))
 {
     <div class="form-group">
@@ -44,4 +46,6 @@
             "Select membershiptype" -> luo rivin listan ylimmäksi -->
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
     </div>
+
+    <button type="submit" class="btn btn-primary">Save</button>
 }
