--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -29,7 +29,7 @@
 
     <div class="form-group">
         @Html.Label("Date of Birth")
-        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d MMM yyyy }", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d/M/yyyy }", new { @class = "form-control" })
     </div>
 
     <div class="form-group">
