--- a/Vidly/Vidly/Views/Movies/New.cshtml
+++ b/Vidly/Vidly/Views/Movies/New.cshtml
@@ -28,7 +28,7 @@
             2. name of the property in membership type class which holds item
             3. property joka holds text to item
             "Select membershiptype" -> luo rivin listan ylimmäksi -->
-        @Html.DropDownListFor(m => m.Movie.Genre.Id, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
     </div>
 
     <div class="form-group">
