--- a/Vidly/Vidly/Content/Site.css
+++ b/Vidly/Vidly/Content/Site.css
@@ -22,3 +22,10 @@ select,
 textarea {
     max-width: 280px;
 }
+/* Lomakkeen validointivirheiden muotoilu */
+.field-validation-error {
+    color: red;
+}
+.input-validation-error {
+    border: 2px solid red;
+}
