--- a/Vidly/Vidly/Content/Site.css
+++ b/Vidly/Vidly/Content/Site.css
@@ -29,3 +29,7 @@ textarea {
 .input-validation-error {
     border: 2px solid red;
 }
+/* ValidationSummary errors */
+.validation-summary-errors {
+    color: red;
+}
