--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -17,6 +17,10 @@
     -->
 @using (Html.BeginForm("Save", "Customers"))
 {
+    <!--ValidationSummary tekee kaikki validation messaget yhteen paikkaan (jos false)
+        jos true niin individual property errors will be excluded from validationsummary -->
+    @Html.ValidationSummary(true, "Please fix the following erros.")
+
     <div class="form-group">
         <!--Label tekee perustekstin ja sisältönä "Name" Customer luokasta
             LabelFor on label tietylle ja label on pelkkä teksti -->
@@ -26,13 +30,7 @@
             Form control on tyyliluokka bootstrapista -->
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
         <!-- Validation message -->
-        @Html.ValidationMessageFor(m =>m.Customer.Name)
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Date of Birth")
-        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d/M/yyyy }", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
 
     <div class="form-group">
@@ -44,6 +42,12 @@
         "Select membershiptype" -> luo rivin listan ylimmäksi -->
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Date of Birth")
+        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d/M/yyyy }", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
 
     <div class="form-group">
