--- a/Vidly/Vidly/Views/Movies/New.cshtml
+++ b/Vidly/Vidly/Views/Movies/New.cshtml
@@ -11,14 +11,18 @@
     kun submit-painiketta klikataan -->
 @using (Html.BeginForm("Save", "Movies"))
 {
+    @Html.ValidationSummary(true, "Please fix the following errors.")
+
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.Name)
-        @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
 
     <div class="form-group">
         @Html.Label("Release Date")
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:d/M/yyyy }", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.ReleaseDate, "{0:d/M/yyyy }", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>
 
     <div class="form-group">
@@ -28,16 +32,25 @@
             2. name of the property in membership type class which holds item
             3. property joka holds text to item
             "Select membershiptype" -> luo rivin listan ylimmäksi -->
-        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.GenreId, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.GenreId)
     </div>
 
     <div class="form-group">
         @Html.Label("Number in Stock")
-        @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.NumberInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NumberInStock)
     </div>
 
     //hidden kenttä, lähtee eteenpäin mutta ei näy käyttäjälle
-    @Html.HiddenFor(m => m.Movie.Id)
+    @Html.HiddenFor(m => m.Id)
+
+    @Html.AntiForgeryToken()
 
     <button type="submit" class="btn btn-primary">Save</button>
+}
+<!--client side errors aktivointi-->
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
