--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -35,8 +35,9 @@ else
                     <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
                     <td>@customer.MembershipType.Name</td>
                     <td>
-                        <!--Kaksi luokkaa, btn-link muotoiluun(bootstrap) ja js-delete javascriptiä varten-->
-                        <button class="btn-link js-delete">Delete</button>
+                        <!--Kaksi luokkaa, btn-link muotoiluun(bootstrap) ja js-delete javascriptiä varten
+                            data-customer-id tallentaa kyseisen id:n muuttujaan -->
+                        <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
                     </td>
                 </tr>
             }
@@ -45,14 +46,25 @@ else
 }
 
 <!--Jquery, etsitään id customers (taulukko) ja sieltä kaikki luokan js-delete objektit
-    on-metodi hoitaa click-eventit ja function = callback function
+    on-metodi hoitaa click-eventit ja function = callback function eli se mitä tehdään
     -->
 @section scripts 
 {
     <script>
         $(document).ready(function () {
             $("#customers .js-delete").on("click", function () {
-                confirm("Are you sure you want to delete this customer?");
+                var button = $(this);
+
+                if (confirm("Are you sure you want to delete this customer?")) {
+                    $.ajax({
+                        url: "/api/customers/" + button.attr("data-customer-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                            //console.log("Success");
+                        }
+                    });
+                }
             });
         });    
     </script>>
