--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -55,8 +55,10 @@ else
             $("#customers .js-delete").on("click", function () {
                 var button = $(this);
 
-                if (confirm("Are you sure you want to delete this customer?")) {
-                    $.ajax({
+                // Bootbox.confirm ei palauta booleania, it takes a callback function
+                bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
+                    if (result) { //jos tulos on oikea arvo (eli ei nolla tai määrittelemätön)
+                        $.ajax({
                         url: "/api/customers/" + button.attr("data-customer-id"),
                         method: "DELETE",
                         success: function () {
@@ -64,7 +66,8 @@ else
                             //console.log("Success");
                         }
                     });
-                }
+                    }
+                });
             });
         });    
     </script>>
